Update gitignore and cleanup configuration files